🚀 Added cleaned training code

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-results/*
+results
 
 # Created by https://www.gitignore.io/api/macos,python,jupyternotebooks,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=macos,python,jupyternotebooks,visualstudiocode
