--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 results
+.competitors
 
 # Created by https://www.gitignore.io/api/macos,python,jupyternotebooks,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=macos,python,jupyternotebooks,visualstudiocode
